<resources>
    <string name="app_name">minesweeper</string>
    <string name="minesweeper">MINESWEEPER</string>
    <string name="choose_level">Choose Level:</string>
    <string name="start_game">START GAME</string>
    <string name="easy">EASY</string>
    <string name="hard">HARD</string>
    <string name="medium">MEDIUM</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="next">next</string>
    <string name="radio_easy">EASY</string>
    <string name="radio_medium">MEDIUM</string>
    <string name="radio_hard">HARD</string>
    <string name="timerVal">00:00</string>
    <string name="O">O</string>
    <string name="textview">TextView</string>
    <string name="fragment">RECORDS</string>
    <string name="back_button">BACK</string>
    <string name="save_button">SAVE</string>
    <string name="save_text">NEW RECORD</string>
    <string name="enter_name">Enter name: </string>
    <string name="level">LEVEL</string>
    <string name="place">PLACE</string>
    <string name="name">NAME</string>
    <string name="record">MOVES</string>
    <string name="none">-</string>
    <string name="place1">#1</string>
    <string name="place2">#2</string>
    <string name="place3">#3</string>
    <string name="here">Type here...</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
</resources>
