<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minesweeper.EndScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="80sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorWhite"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/textview"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageMove"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/register_btn_wrapper"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_below="@id/imageMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
        android:id="@+id/play_again"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/roundedbutton"
        android:layout_marginBottom="30sp"
        android:textColor="@color/colorWhite"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/play_again"
        android:onClick="playAgain"/>

        <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="63dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/roundedbutton"
            android:text="@string/exit"
        android:onClick="exitApp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_save"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</RelativeLayout>