<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="323dp"
    android:layout_gravity="center"
    android:shadowDx="5"
    android:shadowDy="5"
    android:shadowRadius="6"
    android:shadowColor="@color/colorBlack"
    android:background="@color/colorAccent"
    tools:context="com.example.minesweeper.Fragments.RecordTable">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:shadowColor="@color/LightSeaGreen"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/save_text"
        android:textAlignment="center"
        android:textColor="@color/FireBrick"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/enterName"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/enter_name"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="..."
        android:layout_marginStart="20dp"
        android:inputType=""
        android:hint="@string/here"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/recordbutton"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/save_button"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onBackPressed"
        tools:ignore="OnClick" />


</FrameLayout>